Issue #62: Userlist - hide scrollbar if not needed (overflow-y:auto)

--- a/client_backbone/css/style.css
+++ b/client_backbone/css/style.css
@@ -18,7 +18,7 @@ a { color:#36C; text-decoration:none; cursor:pointer; }
  */
 #toolbar { position:absolute; top:0px; width:100%; background-color:#1B1B1B; font-size:0.9em; }
 #panels { position:absolute; left:0px; right:200px; bottom:100px; top:100px; }
-#memberlists { position:absolute; right:0px; width:200px; bottom:100px; top:100px; overflow-y:scroll; }
+#memberlists { position:absolute; right:0px; width:200px; bottom:100px; top:100px; overflow-y:auto; }
 #controlbox { position: absolute; bottom:0px; width:100%; background-color:#1B1B1B; }
 
 
